2024-05-18T00:39:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9135896929 # 282
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 809 1278
* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 810 1279
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-17T08:11:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9125070301 # 280
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-17
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 808 1277
* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 809 1278
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-17]

2024-05-16T16:10:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9115629389 # 278
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-16
* notice: last 14d: unq all: 5 20
* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 807 1276
* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 808 1277
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2024-05-16]

2024-05-16T08:09:46Z: