@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-18T00:39:28Z",
+  "timestamp" : "2024-05-18T08:10:02Z",
   "count_outdated" : 1257,
   "uniques_outdated" : 790,
-  "count" : 1279,
-  "uniques" : 810,
+  "count" : 1281,
+  "uniques" : 811,
   "clones" : [
     {
       "timestamp": "2024-05-04T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
