@@ -1,5 +1,5 @@
 {
-  "count": 22,
+  "count": 24,
   "uniques": 6,
   "clones": [
     {
@@ -56,6 +56,11 @@
       "timestamp": "2024-05-17T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-18T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
