@@ -1,3 +1,12 @@
+2024-05-18T08:10:02Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9138464421 # 283
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
+* notice: last 14d: unq all: 6 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 790 1257 / 810 1279
+* notice: next accum: outdated-unq outdated-all / unq all: 790 1257 / 811 1281
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-05-18]
+
 2024-05-18T00:39:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9135896929 # 282
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-18
